--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
       <div class="row g-0 py-5">
         <div class="col-lg-6 position-relative divid">
 
-          <img src="/img/s8.png" class="figure-img img-fluid" alt="...">
+          <img src="./img/s8.png" class="figure-img img-fluid" alt="...">
 
           <div class="title">
             <h4>START FOR FREE</h4>
@@ -311,7 +311,7 @@
         </div>
         <div class="col-lg-6 position-relative divid">
 
-          <img src="/img/s9.png" class="figure-img img-fluid " alt="...">
+          <img src="./img/s9.png" class="figure-img img-fluid " alt="...">
 
           <div class="title p-auto">
             <h4>CALL US FOR FREE</h4>
