--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <!--Staff-end-->
 
     <!--divide-start-->
-    <div class="container-fluid">
+    <div class="container-fluid my-5">
       <div class="row g-0 py-5">
         <div class="col-lg-6 position-relative divid">
 
