--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
               <div class="card mb-3 foo-car" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="/img/s21.png" class="img-fluid rounded-start" alt="...">
+                    <img src="./img/s21.png" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -367,7 +367,7 @@
               <div class="card mb-3 foo-car" style="max-width: 540px;">
                 <div class="row g-0 bg-transparent">
                   <div class="col-md-4">
-                    <img src="/img/s21.png" class="img-fluid rounded-start" alt="...">
+                    <img src="./img/s21.png" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body ">
@@ -381,7 +381,7 @@
               <div class="card mb-3 foo-car" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="/img/s21.png" class="img-fluid rounded-start" alt="...">
+                    <img src="./img/s21.png" class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
@@ -399,35 +399,35 @@
             <div class="row  pt-5">
               <div class="col-lg-3">
                 <figure>
-                  <img src="/img/s10.png" alt="">
+                  <img src="./img/s10.png" alt="">
                 </figure>
                 <figure>
-                  <img src="/img/s11.png" alt="">
+                  <img src="./img/s11.png" alt="">
                 </figure>
                 <figure>
-                  <img src="/img/s12.png" alt="">
-                </figure>
-              </div>
-              <div class="col-lg-3">
-                <figure>
-                  <img src="/img/s13.png" alt="">
-                </figure>
-                <figure>
-                  <img src="/img/s14.png" alt="">
-                </figure>
-                <figure>
-                  <img src="/img/s15.png" alt="">
+                  <img src="./img/s12.png" alt="">
                 </figure>
               </div>
               <div class="col-lg-3">
                 <figure>
-                  <img src="/img/s16.png" alt="">
+                  <img src="./img/s13.png" alt="">
                 </figure>
                 <figure>
-                  <img src="/img/s17.png" alt="">
+                  <img src="./img/s14.png" alt="">
                 </figure>
                 <figure>
-                  <img src="/img/s18.png" alt="">
+                  <img src="./img/s15.png" alt="">
+                </figure>
+              </div>
+              <div class="col-lg-3">
+                <figure>
+                  <img src="./img/s16.png" alt="">
+                </figure>
+                <figure>
+                  <img src="./img/s17.png" alt="">
+                </figure>
+                <figure>
+                  <img src="./img/s18.png" alt="">
                 </figure>
               </div>
             </div>
